--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,6 @@ nav#menu{
 }
 
 nav#menu a{
-	display: inline-block;
 	padding: 0.5em;
 	background: red;
 	font-size:1rem;
@@ -37,6 +36,10 @@ nav#menu a{
 	padding-top:1em;
 }
 
+#left-bar a{
+	display: block;
+}
+
 #circle-img{
 	padding: 1em;
 	width:8em;
@@ -49,3 +52,11 @@ nav#menu a{
 #left-bar #photo{
 	width:100%;
 }
+
+#name{
+	margin-top:1.5em;
+	text-align:center;
+	font-size:1.5em;
+}
+
+/**/
