--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+/*for var_dump show correctly*/
+
+pre.xdebug-var-dump{
+	width:80%;
+	position:absolute;
+	right:1em;
+}
+
 header{
 	width:85%;
 	position:absolute;
