--- a/View/post/viewAll.phtml
+++ b/View/post/viewAll.phtml
@@ -1,6 +1,29 @@
+<ul>
 <?php
 
-var_dump($result);
+
+$i = 0;
+while($i < count($result)){
+	echo "<li>";
+
+	echo "</li>";
+	$i++;
+}
 
 
 ?>
+</ul>
+
+<ul id="post-list">
+	<li>
+
+			<img class="img-post" src="assets/img/photo.png" />
+		
+		<div class="content-post">
+			<h2>titre</h2>
+			<p>Verum ad istam omnem orationem brevis est defensio. Nam quoad aetas M. Caeli dare potuit isti suspicioni locum, fuit primum ipsius pudore, deinde etiam patris diligentia disciplinaque munita. Qui ut huic virilem togam deditšnihil dicam hoc loco de me; tantum sit, quantum vos existimatis; hoc dicam, hunc a patre continuo ad me esse deductum; nemo hunc M. Caelium in illo aetatis flore vidit nisi aut cum patre aut mecum aut in M. Crassi castissima domo, cum artibus honestissimis erudiretur.
+			</p>
+			<p class="date-post">date</p>
+		</div>
+	</li>
+</ul>
