--- a/View/post/view.phtml
+++ b/View/post/view.phtml
@@ -4,6 +4,7 @@
 		echo "<h2>".$result->getTitle()."</h2>";
 		echo "<img src='assets/img/".$result->getImage()."' />";
 		echo "<p>".$result->getContent()."</p>";
+		echo "<p>".$result->getAuthor()."</p>";
 		echo "<p>".$result->getCreatedAt()."</p>";
 	}
 	?>
