--- a/View/post/viewAll.twig
+++ b/View/post/viewAll.twig
@@ -20,7 +20,7 @@
       {% endfor %}
             <!-- Pager -->
             <div class="clearfix">
-              <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+              <a class="btn btn-primary float-right" href="#">Ancien Posts &rarr;</a>
             </div>
           </div>
   </div>
