--- a/View/post/viewAll.twig
+++ b/View/post/viewAll.twig
@@ -15,6 +15,8 @@
               <p class="post-meta">Poster par
                 <a href="#">{{article.getAuthor()}}</a>
                 le {{article.getCreatedAt()}}</p>
+                <a href="#"><button type="button" class="btn btn-primary">Modifier</button></a>
+                <a href="#"><button type="button" class="btn btn-danger">Suprimer</button></a>
             </div>
             <hr>
       {% endfor %}
