edit view add twig var

--- a/View/post/edit.twig
+++ b/View/post/edit.twig
@@ -6,11 +6,11 @@
       <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
       <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
       <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-      <form action="?post&action=editPost" method="POST" name="addPost" id="contactForm" enctype="multipart/form-data">
+      <form action="?post&action=edit&id={{article.getId}}" method="POST" name="addPost" id="contactForm" enctype="multipart/form-data">
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
             <label>Titre</label>
-            <input name="title" type="text" class="form-control" placeholder="Titre" id="title" required data-validation-required-message="Please enter your name.">
+            <input name="title" type="text" class="form-control" placeholder="Titre" id="title" required data-validation-required-message="Please enter your name." value="{{article.getTitle}}">
             <p class="help-block text-danger"></p>
           </div>
         </div>
@@ -24,14 +24,16 @@
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
             <label>Contenu</label>
-            <textarea name="content" rows="5" class="form-control" placeholder="Contenu" id="content" required data-validation-required-message="Please enter a message."></textarea>
+            <textarea name="content" rows="5" class="form-control" placeholder="Contenu" id="content" required data-validation-required-message="Please enter a message.">{{article.getContent()}}</textarea>
             <p class="help-block text-danger"></p>
           </div>
         </div>
         <br>
         <div id="success"></div>
         <div class="form-group">
+
           <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+          
         </div>
       </form>
     </div>
