--- a/View/post/viewAll.twig
+++ b/View/post/viewAll.twig
@@ -16,7 +16,7 @@
                 <a href="#">{{article.getAuthor()}}</a>
                 le {{article.getCreatedAt()}}</p>
                 <a href="?post&action=edit&id={{article.getId()}}"><button type="button" class="btn btn-primary">Modifier</button></a>
-                <a href="#"><button type="button" class="btn btn-danger">Suprimer</button></a>
+                <a href="?post&action=delete&id={{article.getId()}}"><button type="button" class="btn btn-danger">Suprimer</button></a>
             </div>
             <hr>
       {% endfor %}
