--- a/View/account/Inscription.twig
+++ b/View/account/Inscription.twig
@@ -1,5 +1,5 @@
 <form method="post">
-	<input type="text" placeholder="pseudo" name="pseudo"/>
+	<input type="text" placeholder="pseudo" name="name"/>
 	<input type="email" placeholder="mail" name="mail"/>
 	<input type="password" placeholder="pass" name="pass"/>
 	<input type="submit" />
