--- a/View/account/Inscription.twig
+++ b/View/account/Inscription.twig
@@ -1,4 +1,4 @@
-<form method="post">
+<form action="?account&action=inscription" method="post">
 	<input type="text" placeholder="pseudo" name="name"/>
 	<input type="email" placeholder="mail" name="mail"/>
 	<input type="password" placeholder="pass" name="pass"/>
