--- a/View/post/view.twig
+++ b/View/post/view.twig
@@ -1,4 +1,4 @@
- <header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
+ <header class="masthead" style="background-image: url('/assets/img/{{article.getImage()}}')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
