--- a/View/account/Connection.twig
+++ b/View/account/Connection.twig
@@ -1,3 +1,7 @@
+{% if connect is not empty %}
+    <p>{{connect}}</p>
+{% endif %}
+
 <div id="connectAndRegister" class="text-center">
 	<button type="button" class="btn btn-dark col-md-5 active" id="connection-switch">Connection</button>
 	<button type="button" class="btn btn-dark col-md-5" id="register-switch">Inscription</button>
