--- a/View/account/Connection.twig
+++ b/View/account/Connection.twig
@@ -5,7 +5,7 @@
 <div id="connectAndRegister" class="text-center">
 	<button type="button" class="btn btn-dark col-md-5 active" id="connection-switch">Connection</button>
 	<button type="button" class="btn btn-dark col-md-5" id="register-switch">Inscription</button>
-	<form action="?account&action=connection" method="POST" name="connection" id="connect-form">
+	<form action="/account/connection" method="POST" name="connection" id="connect-form">
         <div class="control-group row justify-content-md-center" >
           <div class="form-group floating-label-form-group controls">
             <label>Pseudo</label>
@@ -29,7 +29,7 @@
 
 
 
-      <form style="display:none" action="?account&action=inscription" method="POST" name="register" id="register-form">
+      <form style="display:none" action="/account/inscription" method="POST" name="register" id="register-form">
         <div class="control-group row justify-content-md-center">
           <div class="form-group floating-label-form-group controls">
             <label>Titre</label>
