--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 /*connection/register*/
 #connectAndRegister{
 	width:50%;
@@ -62,8 +56,7 @@
 
 
 .info-comment{
-	width:50%;
 	position:absolute;
-	top:1em;
+	bottom:0em;
 	right:1em;
 }
