controller add check right for subAction

--- a/View/post/viewAll.twig
+++ b/View/post/viewAll.twig
@@ -15,8 +15,12 @@
               <p class="post-meta">Poster par
                 <a href="#">{{article.getAuthor()}}</a>
                 le {{article.getCreatedAt()}}</p>
-                <a href="/post/edit/{{article.getId()}}"><button type="button" class="btn btn-primary">Modifier</button></a>
-                <a href="/post/delete/{{article.getId()}}"><button type="button" class="btn btn-danger">Suprimer</button></a>
+                {% if right['edit'] == true %}
+                  <a href="/post/edit/{{article.getId()}}"><button type="button" class="btn btn-primary">Modifier</button></a>
+                {% endif %}
+                {% if right['delete'] == true %}
+                  <a href="/post/delete/{{article.getId()}}"><button type="button" class="btn btn-danger">Suprimer</button></a>
+                {% endif %}
             </div>
             <hr>
       {% endfor %}
