post add user with inner join (full object)

--- a/View/header/post.twig
+++ b/View/header/post.twig
@@ -6,7 +6,7 @@
             <div class="post-heading">
               <h1>{{article.getTitle()}}</h1>
               <span class="meta">Posted by
-                <a href="#">{{article.getAuthor()}}</a>
+                <a href="#">{{article.getAuthor().getName()}}</a>
                 le {{article.getCreatedAt()}}</span>
             </div>
           </div>
