--- a/View/post/viewAll.twig
+++ b/View/post/viewAll.twig
@@ -13,7 +13,7 @@
                 </p>
               </a>
               <p class="post-meta">Poster par
-                <a href="#">{{article.getAuthor()}}</a>
+                <a href="#">{{article.getAuthor().getName()}}</a>
                 le {{article.getCreatedAt()}}</p>
                 {% if right['edit'] == true %}
                   <a href="/post/edit/{{article.getId()}}"><button type="button" class="btn btn-primary">Modifier</button></a>
