--- a/View/menu/adminMenu.twig
+++ b/View/menu/adminMenu.twig
@@ -13,8 +13,13 @@
             <li class="nav-item">
               <a class="nav-link" href="/post/viewAll">Blog</a>
             </li>
+
             <li class="nav-item">
-              <a class="nav-link" href="/account/connection">connexion</a>
+              <a class="nav-link" href="/adminPanel">Administration</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="/account/disconnect">Déconnection</a>
             </li>
 
           </ul>
