--- a/View/post/view.twig
+++ b/View/post/view.twig
@@ -14,8 +14,9 @@
 
 <div class="container">
   <ul class="row">
+    <h3 class="col-lg-8 col-md-10 mx-auto">commentaire :</h3>
     {% for comment in comments %}
-      <li class="col-lg-8 col-md-10 mx-auto">
+      <li class="col-lg-8 col-md-10 mx-auto comment-list">
         <p class="comment">{{comment.getContent()}}</p>
         <div class="info-comment">par <a href="#">{{comment.getAuthor().getName()}}</a></span> <span class="comment-date"> le {{comment.getDate()}}</span></div>
       </li>
@@ -29,7 +30,7 @@
       <form action="/post/addComment/{{article.getId()}}" method="POST" name="addComment" id="contactForm">
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
-            <label>Contenu</label>
+            <label>Commentaire</label>
             <textarea name="content" rows="5" class="form-control" placeholder="Contenu" id="content" required data-validation-required-message="Please enter a message."></textarea>
             <p class="help-block text-danger"></p>
           </div>
@@ -37,7 +38,7 @@
         <br>
         <div id="success"></div>
         <div class="form-group">
-          <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+          <button type="submit" class="btn btn-primary" id="sendMessageButton">Envoyer</button>
         </div>
       </form>
     </div>
