--- a/View/home/defaut.twig
+++ b/View/home/defaut.twig
@@ -4,6 +4,11 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
+
+      <section id="info">
+          <a href="https://survive-in-hell.fr/cv.pdf"><i class="fas fa-receipt"></i> Mon cv</a>
+      </section>
+
       <section id="info">
           <a href="https://github.com/dictateurfou"><i class="fab fa-github"></i> github</a>
           <a href="https://www.linkedin.com/in/steven-hervy-67416a157/"> <i class="fab fa-linkedin"></i> linkdin</a>
