--- a/View/defaultLayer.twig
+++ b/View/defaultLayer.twig
@@ -5,7 +5,7 @@
 	    <meta name="description" content="">
 	    <meta name="author" content="">
 
-	    <title>Clean Blog - Start Bootstrap Theme</title>
+	    <title>Blog</title>
 
 	    <!-- Bootstrap core CSS -->
 
